<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.trikarya.growth.RegisterVisitPlan"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outletName"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dashboard_padding"/>
    <TextView
        android:id="@+id/rvp_outletname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:textSize="@dimen/et_textsize"
        android:text="Enter Outlet Name"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:background="@drawable/shape_white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_date"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dashboard_padding"/>
    <TextView
        android:id="@+id/visitDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:textSize="@dimen/et_textsize"
        android:clickable="true"
        android:background="@drawable/shape_gray"
        android:text="@string/enter_date"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:gravity="center_vertical"/>
    <Button
        android:id="@+id/rvp_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height_medium"
        android:background="@drawable/shape_younggreen"
        android:layout_marginTop="@dimen/bt_margin_vertical"
        android:drawableLeft="@mipmap/panah"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/et_textsize"
        android:drawablePadding="@dimen/bt_drawable_padding_big"
        android:paddingLeft="@dimen/bt_padding_horizontal_big"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"/>
</LinearLayout>
