<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.SubmitVisitStep2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="step 2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/city"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/sv_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/outletType"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/sv_outlettype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/outletRank"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/sv_outletrank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/outletPhone"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/sv_outletphone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/registeredSF"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/sv_sf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false" />
        </LinearLayout>
        <Button
            android:id="@+id/sv_s2_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/green"
            android:layout_alignParentBottom="true"
            android:text="@string/next"/>
    </RelativeLayout>

</FrameLayout>
