<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.RegisterOutlet1">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="step 1"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outletName"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <EditText
                android:id="@+id/ro_outletname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_white"
                android:hint="input outlet name..."
                android:paddingLeft="@dimen/et_padding_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <EditText
                android:id="@+id/ro_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height_big"
                android:background="@drawable/shape_white"
                android:hint="input address..."
                android:gravity="top"
                android:padding="@dimen/et_padding_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/city"
                android:textColor="@android:color/black" />
            <Spinner
                android:id="@+id/ro_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/distributor"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/ro_distributor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <Button
            android:id="@+id/ro_s1_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/blue"
            android:layout_alignParentBottom="true"
            android:text="@string/next"/>
    </RelativeLayout>
</FrameLayout>
