<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Competitor1">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/et_height_medium">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:clickable="true"
                android:id="@+id/com_take_photo"
                android:layout_width="@dimen/iv_size_takePhoto"
                android:layout_height="@dimen/iv_size_takePhoto"
                android:src="@mipmap/camera"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dashboard_padding"
                android:text="@string/date"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/com_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false"
                android:hint="pick a date..."
                android:clickable="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <Spinner
                android:id="@+id/com_brand"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <EditText
                android:id="@+id/com_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:background="@drawable/shape_white"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@android:color/black"

                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <Spinner
                android:id="@+id/com_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:spinnerMode="dropdown"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/com_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/orange"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:text="@string/next"/>
</RelativeLayout>
