<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.trikarya.growth.SkipOrder"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dashboard_padding"/>
    <EditText
        android:id="@+id/so_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:background="@drawable/shape_gray"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:editable="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outletName"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dashboard_padding"/>
    <EditText
        android:id="@+id/so_outletname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:background="@drawable/shape_gray"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cause"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dashboard_padding"/>
    <Spinner
        android:id="@+id/so_cause"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="@dimen/activity_vertical_margin"></Spinner>
    <EditText
        android:id="@+id/so_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:background="@drawable/shape_white"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:hint="Masukkan alasan"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:visibility="gone"></EditText>
    <Button
        android:id="@+id/so_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height_medium"
        android:background="@drawable/shape_youngpurple"
        android:layout_marginTop="@dimen/bt_margin_vertical"
        android:drawableLeft="@mipmap/panah"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/et_textsize"
        android:drawablePadding="@dimen/bt_drawable_padding_big"
        android:paddingLeft="@dimen/bt_padding_horizontal_big"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
