<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.SubmitVisitStep1">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="step 1"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outletName"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <TextView
                android:id="@+id/sv_outletname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:textSize="@dimen/et_textsize"
                android:text="Enter Outlet Name"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:background="@drawable/shape_white"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distributor"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <EditText
                android:id="@+id/sv_distributor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/dashboard_padding"/>
            <EditText
                android:id="@+id/sv_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height_big"
                android:background="@drawable/shape_gray"
                android:paddingLeft="@dimen/et_padding_horizontal"
                android:editable="false"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <Button
            android:id="@+id/sv_s1_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/orange"
            android:layout_alignParentBottom="true"
            android:text="@string/next"/>
    </RelativeLayout>

</FrameLayout>
